adds styling changes

--- a/index.html
+++ b/index.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
-<!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
-<!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
-<!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
-<!--[if (gte IE 9)|!(IE)]><!--><html lang="en"> <!--<![endif]-->
+<html lang="en">
 <head>
 
 	<!-- Basic Page Needs
   ================================================== -->
 	<meta charset="utf-8">
-	<title>Jonelle's the bomb diggity</title>
-	<meta name="description" content="Make any girlfriend feel special with the click of a button">
+	<title>Jonelle is f*cking awesome</title>
+	<meta name="description" content="Let me tell you how awesome Jonelle is">
 	<meta name="author" content="Dan Thareja">
 
 	<!-- Mobile Specific Metas
@@ -18,13 +15,9 @@
 
 	<!-- CSS
   ================================================== -->
-	<link rel="stylesheet" href="styles/base.css">
-	<link rel="stylesheet" href="styles/skeleton.css">
-	<link rel="stylesheet" href="styles/layout.css">
-
-	<!--[if lt IE 9]>
-		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-	<![endif]-->
+	<link rel="stylesheet" href="css/base.css">
+	<link rel="stylesheet" href="css/skeleton.css">
+	<link rel="stylesheet" href="css/layout.css">
 
 	<!-- Favicons
 	================================================== -->
@@ -36,19 +29,27 @@
 </head>
 <body>
 
-
 	<!-- Primary Page Layout
 	================================================== -->
 
-	<!-- Delete everything in this .container and get started on your own site! -->
 	<!-- container -->
 	<div class="container">
 		<div class="sixteen columns">
-			<a href="#" class="full-width button">How awesome is Jonelle?</a>
+			<h2 class="logo">
+				<a href="index.html">Jonelle is fucking awesome</a>
+			</h2>
+		</div>
+		<div class="sixteen columns">
+		  <p class="compliment">This is a blockquote style example. It stands out, but is awesome</p>
+		</div>
+		<div class="eight columns offset-by-four">
+			<a href="#" class="full-width button refresh">How awesome is Jonelle?</a>
 		</div>
 	</div>
 
 	<script src="bower_components/jquery/dist/jquery.min.js"></script>
+	<script src="js/main.js"></script>
+
 <!-- End Document
 ================================================== -->
 </body>
