changes favicon and cleans up directories

--- a/index.html
+++ b/index.html
@@ -22,9 +22,6 @@
 	<!-- Favicons
 	================================================== -->
 	<link rel="shortcut icon" href="img/favicon.ico">
-	<link rel="apple-touch-icon" href="img/apple-touch-icon.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="img/apple-touch-icon-72x72.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="img/apple-touch-icon-114x114.png">
 
 </head>
 <body>
@@ -40,7 +37,7 @@
 			</h2>
 		</div>
 		<div class="sixteen columns">
-		  <p class="compliment">This is a blockquote style example. It stands out, but is awesome</p>
+		  <p class="compliment"></p>
 		</div>
 		<div class="eight columns offset-by-four">
 			<a href="#" class="full-width button refresh">How awesome is Jonelle?</a>
